# napari-geojson

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_geojson/: __init__.py  _reader.py  _writer.py
src/napari_geojson/_tests/: test_writer.py
tests/: conftest.py  test_reader.py  test_writer.py
tests/test_data/: polygon_with_hole.geojson  valid_feature_collection.geojson  valid_geometry_collection.geojson  xyz_feature_collection.geojson
